// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should renders correctly with data 1`] = `
<div>
  <div
    class="list"
    data-testid="list"
  >
    <a
      class="item light"
      href="/detail/1?search=&page=1"
    >
      <div
        class="content"
      >
        <input
          class="input"
          type="checkbox"
        />
        <div>
          Mocked Planet
        </div>
        <div />
      </div>
    </a>
    <a
      class="item light"
      href="/detail/2?search=&page=1"
    >
      <div
        class="content"
      >
        <input
          class="input"
          type="checkbox"
        />
        <div>
          Mocked Planet 2
        </div>
        <div />
      </div>
    </a>
  </div>
</div>
`;

exports[`List should renders correctly without data 1`] = `
<div>
  <div
    class="list"
    data-testid="list"
  />
</div>
`;
